--- a/common_style.css
+++ b/common_style.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Monofett&family=Montserrat&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&family=Poppins&family=Rubik+Iso&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,4 +8,22 @@
 }
 .card-title1{
     color:green;
+}
+.main{
+    color:Coral;
+}
+.main-button{
+    margin-top: 30%;
+    background: transparent;
+}
+a.btn:hover{
+ border:1px solid #fff;
+background:transparent;
+color:coral;
+font-weight:600;
+font-family: 'Montserrat', sans-serif;
+
+}
+.main-title{
+    font-family: 'Montserrat', sans-serif;
 }
