--- a/common_style.css
+++ b/common_style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Monofett&family=Montserrat&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&family=Poppins&family=Rubik+Iso&display=swap');
 *{
     margin: 0;
@@ -25,5 +25,5 @@ font-family: 'Montserrat', sans-serif;
 
 }
 .main-title{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Tilt Prism', cursive;
 }
