--- a/common_style.css
+++ b/common_style.css
@@ -7,6 +7,15 @@
     box-sizing: border-box;
    
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
 .card-img{
     width: 100%;
    height:100vh;
@@ -18,11 +27,13 @@
 }
 .main{
     color:Coral;
+    
 }
 .main-button{
     margin-top: 30%;
     background: transparent;
 }
+
 a.btn:hover{
  border:1px solid #fff;
 background:transparent;
