--- a/common_style.css
+++ b/common_style.css
@@ -7,7 +7,9 @@
     box-sizing: border-box;
    
 }
-
+.fa{
+    color:#fff;
+}
 .icon{
     width: 100px;
     margin-right: 80px;
@@ -21,13 +23,6 @@
   'GRAD' 0,
   'opsz' 48
 }
-
-.card-img{
-    width: 100%;
-   height:100vh;
-    background:radial-gradient(purple,blue);
-}
-
 .card-title1{
     color:green;
 }
@@ -50,8 +45,8 @@ button.btn:hover{
 
  a.btn:hover{
  border:1px solid #838181;
-background:transparent;
-color:coral;
+background:#fff;
+color:rgb(247, 73, 10);
 font-weight:600;
 font-family: 'Montserrat', sans-serif;
 
@@ -60,3 +55,14 @@ font-family: 'Montserrat', sans-serif;
     font-family: 'Tilt Prism', cursive;
     font-weight: 600;
 }
+/* main index styling start */
+.main-index{
+    background-image:url('bg-Top.svg');
+    background-position: bottom-center;
+    background-size:cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+
+/* main index styling end>
