--- a/common_style.css
+++ b/common_style.css
@@ -14,16 +14,7 @@
 .fa{
     color:#f5a97e;
 }
-.fa-arrow-circle-right:hover{
-   color:coral;
-}
-.img-home{
-    width:40px
-}
-.card-title{
-    letter-spacing: .2rem;
-    line-height:0.5rem;
-}
+
 .logo{
     width: 80px;
     height:80px;
@@ -104,3 +95,4 @@ font-family: 'Montserrat', sans-serif;
 
     padding-top: 1rem;
 }
+/*  contact*/
