--- a/main_style.css
+++ b/main_style.css
@@ -10,7 +10,7 @@ html{
 }
 /*index page start*/
 .index{
-    background:url('guineas-fowl.jpg');
+    background:url('https://c0.wallpaperflare.com/preview/1005/624/60/south-africa-claremont-arderne-gardens-bird.jpg');
     position: relative;
     background-position:top center;
     background-size:cover;
