--- a/main_style.css
+++ b/main_style.css
@@ -32,6 +32,9 @@ html{
     margin-top:5%;
     color:rgb(187, 228, 245);
 }
+.moto{
+    color:rgb(245, 203, 224)
+}
 /*titles end*/
 
 /*buttons start*/
